--- a/index.html
+++ b/index.html
@@ -6,3 +6,10 @@
     <link rel="stylesheet" href="styles/styles.css">
     <link rel="icon" href="favicon.ico">
 </head>
+
+<body>
+<p class="test">
+    HTML Academy: Грейдирование
+</p>
+
+</body>
