sticky-footer и visually-hidden

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 
 <body>
-<p class="test">
-    HTML Academy: Грейдирование
-</p>
+
+<main class="main-container main-index">
+</main>
 
 </body>
