Стиль шрифтам хедера

--- a/index.html
+++ b/index.html
@@ -28,14 +28,11 @@
     <div class="search-container">
       <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
         <label class="visually-hidden" for="search-field">Поиск.</label>
-        <input class="search-field" placeholder="Поиск" value="Текст поиска" type="text" name="search-field" id="search-field" required>
+        <input class="search-field" placeholder="Поиск" type="text" name="search-field" id="search-field" required>
       </form>
-      <button class="search-button" type="submit">
-        Найти
-      </button>
     </div>
 
-    <button class="user-button login-button" type="button">Войти</button>
+    <button class="general-button login-button" type="button">Войти</button>
 
 <!--    Навигация-->
     <nav class="header-navigation">
@@ -75,7 +72,8 @@
           </a>
         </li>
       </ul>
-      <button class="navigation-user-button" type="submit">Оформить заказ</button>
+
+      <button class="general-button navigation-user-button" type="submit">Оформить заказ</button>
     </nav>
   </header>
 
