разметка css текста

--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
 </head>
 
 <body>
-<!-- Центровка страницы -->
-<div class="page-container">
 
   <!-- Шапка -->
   <header class="main-header">
-    <address class="store-contacts">
+    <address class="store-contacts page-centerer">
       <p class="store-description">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <p class="store-location">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-      <a class="store-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+      <div class="right-header-container">
+        <p class="store-location">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+        <a class="store-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+      </div>
     </address>
 
 <!--    Лого-->
@@ -80,6 +80,5 @@
   <main class="main-container main-index">
   </main>
 
-</div>
 
 </body>
