задний фон покрашен

--- a/index.html
+++ b/index.html
@@ -11,13 +11,15 @@
 
   <!-- Шапка -->
   <header class="main-header">
-    <address class="store-contacts page-centerer">
-      <p class="store-description">Интернет-магазин строительных материалов и инструментов для ремонта</p>
-      <div class="right-header-container">
-        <p class="store-location">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <a class="store-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
-      </div>
-    </address>
+    <div class="store-contacts-background">
+      <address class="store-contacts page-centerer">
+        <p class="store-description">Интернет-магазин строительных материалов и инструментов для ремонта</p>
+        <div class="right-header-container">
+          <p class="store-location">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          <a class="store-number" href="tel:+78125550555">+7 (812) 555-05-55</a>
+        </div>
+      </address>
+    </div>
 
 <!--    Лого-->
     <a class="navigation-logo" href="#">
