--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="search-container">
           <form class="search-form" action="https://echo.htmlacademy.ru/" method="post">
             <label class="visually-hidden" for="search-field">Поиск.</label>
-            <input class="search-field" placeholder="Поиск" type="text" name="search-field" id="search-field" required>
+            <input class="search-field" placeholder="Поиск:" type="text" name="search-field" id="search-field" required>
           </form>
         </div>
 
