исправил на грид

--- a/index.html
+++ b/index.html
@@ -46,46 +46,49 @@
     </div>
 
 <!--    Навигация-->
-    <nav class="header-navigation">
-      <ul class="navigation-list">
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Главная</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Компания</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Каталог</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Новости</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Спецпредложения</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Доставка</a>
-        </li>
-        <li class="navigation-item">
-          <a class="navigation-link-button" href="#">Контакты</a>
-        </li>
-      </ul>
+    <div class="navigation-background">
+      <nav class="header-navigation page-centerer">
+        <ul class="navigation-list">
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Главная</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Компания</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Каталог</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Новости</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Спецпредложения</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Доставка</a>
+          </li>
+          <li class="navigation-item">
+            <a class="navigation-link-button" href="#">Контакты</a>
+          </li>
+        </ul>
 
-      <ul class="navigation-user">
-        <li class="navigation-user-item">
-          <a class="navigation-user-icon" href="#">
-            <span class="visually-hidden">Избранное.</span>
-          </a>
-        </li>
-        <li class="navigation-user-item">
-          <a class="navigation-user-icon" href="#">
-            <span class="visually-hidden">Корзина товаров.</span>
-          </a>
-        </li>
-      </ul>
+        <ul class="navigation-user">
+          <li class="navigation-user-item">
+            <a class="navigation-user-icon" href="#">
+              <span class="visually-hidden">Избранное.</span>
+            </a>
+          </li>
+          <li class="navigation-user-item">
+            <a class="navigation-user-icon" href="#">
+              <span class="visually-hidden">Корзина товаров.</span>
+            </a>
+          </li>
+        </ul>
 
-      <button class="general-button navigation-user-button" type="submit">Оформить заказ</button>
-    </nav>
+        <button class="general-button navigation-user-button" type="submit">Оформить заказ</button>
+      </nav>
+    </div>
+
   </header>
 
   <main class="main-container main-index">
