разметка маленьких карточек

--- a/index.html
+++ b/index.html
@@ -93,7 +93,62 @@
 
   </header>
 
+<!--  Основная часть страницы-->
   <main class="main-container main-index">
+    <h1 class="visually-hidden">Главная страница сайта.</h1>
+
+<!--    Карточки навигации-->
+    <section class="cards-of-navigation page-centerer">
+      <h2 class="visually-hidden">Карточки навигации по товарам</h2>
+
+      <ul class="cards-list">
+        <li class="card-item">
+          <h3 class="card-title">Материалы</h3>
+
+          <button class="card-button" type="button">
+            На любой вкус
+          </button>
+        </li>
+        <li class="card-item">
+          <h3 class="card-title">Инструмент</h3>
+
+          <button class="card-button" type="button">
+            На все случаи
+          </button>
+        </li>
+
+        <li class="card-item">
+          <h3 class="card-title">Техника</h3>
+
+          <button class="card-button" type="button">
+            Для стройки
+          </button>
+        </li>
+
+        <li class="card-item">
+          <h3 class="card-title">Скидки 50%</h3>
+
+          <button class="card-button" type="button">
+            На 350 товаров
+          </button>
+        </li>
+
+        <li class="card-item">
+          <h3 class="card-title">Доставка</h3>
+
+          <button class="card-button" type="button">
+            Бесплатно
+          </button>
+        </li>
+
+        <li class="card-item slider-item">
+<!--оставлю на потом-->
+        </li>
+
+      </ul>
+
+    </section>
+
   </main>
 
 
