основной вид карточек

--- a/index.html
+++ b/index.html
@@ -105,14 +105,14 @@
         <li class="card-item">
           <h3 class="card-title">Материалы</h3>
 
-          <button class="card-button" type="button">
+          <button class="card-button general-button" type="button">
             На любой вкус
           </button>
         </li>
         <li class="card-item">
           <h3 class="card-title">Инструмент</h3>
 
-          <button class="card-button" type="button">
+          <button class="card-button general-button" type="button">
             На все случаи
           </button>
         </li>
@@ -120,7 +120,7 @@
         <li class="card-item">
           <h3 class="card-title">Техника</h3>
 
-          <button class="card-button" type="button">
+          <button class="card-button general-button" type="button">
             Для стройки
           </button>
         </li>
@@ -128,7 +128,7 @@
         <li class="card-item">
           <h3 class="card-title">Скидки 50%</h3>
 
-          <button class="card-button" type="button">
+          <button class="card-button general-button" type="button">
             На 350 товаров
           </button>
         </li>
@@ -136,7 +136,7 @@
         <li class="card-item">
           <h3 class="card-title">Доставка</h3>
 
-          <button class="card-button" type="button">
+          <button class="card-button general-button" type="button">
             Бесплатно
           </button>
         </li>
