--- a/index.html
+++ b/index.html
@@ -102,7 +102,7 @@
       <h2 class="visually-hidden">Карточки навигации по товарам</h2>
 
       <ul class="cards-list">
-        <li class="card-item">
+        <li class="card-item new-item">
           <h3 class="card-title">Материалы</h3>
 
           <button class="card-button general-button" type="button">
