--- a/index.html
+++ b/index.html
@@ -141,8 +141,28 @@
           </button>
         </li>
 
+<!--        Слайдер-->
         <li class="card-item slider-item">
-<!--оставлю на потом-->
+
+<!--          Кнопки слайдера-->
+          <div class="slider-controls">
+            <button class="slider-button slider-prev" type="button">
+              <span class="visually-hidden">Предыдущий слайд.</span>
+            </button>
+            <button class="slider-button slider-next" type="button">
+              <span class="visually-hidden">Следующий слайд.</span>
+            </button>
+          </div>
+
+<!--          Слайдер-->
+          <ol class="slider">
+
+<!--            Страница слайдера-->
+            <li class="slider-item">
+
+            </li>
+
+          </ol>
         </li>
 
       </ul>
