--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
           <ol class="slider">
 
 <!--            Страница слайдера-->
-            <li class="slider-item">
+            <li class="inner-slider-item">
 
             </li>
 
