исправил на ссылки

--- a/index.html
+++ b/index.html
@@ -105,40 +105,40 @@
         <li class="card-item new-item">
           <h3 class="card-title">Материалы</h3>
 
-          <button class="card-button general-button" type="button">
+          <a class="card-button general-button" href="#">
             На любой вкус
-          </button>
+          </a>
         </li>
         <li class="card-item">
           <h3 class="card-title">Инструмент</h3>
 
-          <button class="card-button general-button" type="button">
+          <a class="card-button general-button" href="#">
             На все случаи
-          </button>
+          </a>
         </li>
 
         <li class="card-item">
           <h3 class="card-title">Техника</h3>
 
-          <button class="card-button general-button" type="button">
+          <a class="card-button general-button" href="#">
             Для стройки
-          </button>
+          </a>
         </li>
 
         <li class="card-item">
           <h3 class="card-title">Скидки 50%</h3>
 
-          <button class="card-button general-button" type="button">
+          <a class="card-button general-button" href="#">
             На 350 товаров
-          </button>
+          </a>
         </li>
 
         <li class="card-item">
           <h3 class="card-title">Доставка</h3>
 
-          <button class="card-button general-button" type="button">
+          <a class="card-button general-button" href="#">
             Бесплатно
-          </button>
+          </a>
         </li>
 
 <!--        Слайдер-->
@@ -159,7 +159,8 @@
 
 <!--            Страница слайдера-->
             <li class="inner-slider-item">
-
+              <h3 class="inner-card-title">Дрели</h3>
+              <p class="slider-description">Соседям на радость!</p>
             </li>
 
           </ol>
