--- a/index.html
+++ b/index.html
@@ -161,6 +161,9 @@
             <li class="inner-slider-item">
               <h3 class="inner-card-title">Дрели</h3>
               <p class="slider-description">Соседям на радость!</p>
+              <a class="inner-slider-button red-button" href="catalog.html">
+                Открыть каталог
+              </a>
             </li>
 
           </ol>
