--- a/index.html
+++ b/index.html
@@ -165,9 +165,30 @@
 
           </ol>
 
+          <!--Кнопка-->
           <a class="inner-slider-button red-button" href="catalog.html">
             Открыть каталог
           </a>
+
+<!--          Пагинация слайдера-->
+          <ol class="slider-pagination">
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button selected-button-slider" type="button">
+                <span class="visually-hidden">Первый слайд.</span>
+              </button>
+            </li>
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Второй слайд.</span>
+              </button>
+            </li>
+            <li class="slider-pagination-item">
+              <button class="slider-pagination-button" type="button">
+                <span class="visually-hidden">Третий слайд.</span>
+              </button>
+            </li>
+          </ol>
+
         </li>
 
       </ul>
