--- a/index.html
+++ b/index.html
@@ -188,10 +188,20 @@
               </button>
             </li>
           </ol>
-
         </li>
-
       </ul>
+    </section>
+
+<!--    Каталог-->
+    <section class="catalog page-centerer">
+      <h2 class="catalog-title">Перфораторы</h2>
+
+      <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
+        <h3 class="catalog-title">Фильтр:</h3>
+
+
+
+      </form>
 
     </section>
 
