--- a/index.html
+++ b/index.html
@@ -196,12 +196,119 @@
     <section class="catalog page-centerer">
       <h2 class="catalog-title">Перфораторы</h2>
 
+<!--      Фильтр-->
       <form class="catalog-filter" action="https://echo.htmlacademy.ru/" method="get">
-        <h3 class="catalog-title">Фильтр:</h3>
+        <!-- Стоимость -->
 
+        <fieldset class="cost">
+          <legend class="filter-title">Цена</legend>
 
+          <div class="range-scale">
+            <div class="range-bar" style="left: 0; width: 119px">
+              <button class="range-toggle toggle-min" type="button">
+                <span class="visually-hidden">Изменить минимальную цену.</span>
+              </button>
+              <button class="range-toggle toggle-max" type="button">
+                <span class="visually-hidden">Изменить максимальную цену.</span>
+              </button>
+            </div>
+          </div>
+
+          <!-- Левый инпут -->
+          <label class="label-left">
+            <span class="visually-hidden">от</span>
+            <input class="range-input" type="number" name="min-price" placeholder="0">
+          </label>
+
+          <!-- Правый инпут -->
+          <label class="label-right">
+            <span class="visually-hidden">до</span>
+            <input class="range-input" type="number" name="max-price" placeholder="30000">
+          </label>
+        </fieldset>
+
+<!--        Производители-->
+        <fieldset class="manufactures">
+          <legend class="filter-title">Производители</legend>
+
+          <ul class="manufactures-checkbox-container">
+            <li class="manufactures-checkbox-item">
+              <label class="control-checkbox">
+                <input class="visually-hidden control-input" type="checkbox" name="bosch" checked="">
+                <span class="control-mark"></span>
+                BOSCH
+              </label>
+            </li>
+            <li class="manufactures-checkbox-item">
+              <label class="control-checkbox">
+                <input class="visually-hidden control-input" type="checkbox" name="interskol" checked="">
+                <span class="control-mark"></span>
+                ИНТЕРСКОЛ
+              </label>
+            </li>
+            <li class="manufactures-checkbox-item">
+              <label class="control-checkbox">
+                <input class="visually-hidden control-input" type="checkbox" name="makita">
+                <span class="control-mark"></span>
+                MAKIta
+              </label>
+            </li>
+            <li class="manufactures-checkbox-item">
+              <label class="control-checkbox">
+                <input class="visually-hidden control-input" type="checkbox" name="dewalt">
+                <span class="control-mark"></span>
+                Dewalt
+              </label>
+            </li>
+            <li class="manufactures-checkbox-item">
+              <label class="control-checkbox">
+                <input class="visually-hidden control-input" type="checkbox" name="hitachi">
+                <span class="control-mark"></span>
+                Hitachi
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+
+        <!-- Питание -->
+        <fieldset class="power-supply-radio">
+          <legend class="filter-title">Питание</legend>
+
+          <ul class="power-supply-list">
+            <li class="power-supply-item">
+              <label class="power-supply-label">
+                <input class="visually-hidden power-supply-input" type="radio" name="power-supply-presence" value="battery" checked="">
+                <span class="control-mark-radio"></span>
+                Аккумуляторные
+              </label>
+            </li>
+            <li class="power-supply-item">
+              <label class="power-supply-label">
+                <input class="visually-hidden power-supply-input" type="radio" name="power-supply-presence" value="network">
+                <span class="control-mark-radio"></span>
+                Сетевые
+              </label>
+            </li>
+          </ul>
+        </fieldset>
+
+        <!-- Кнопка фильтра -->
+        <button class="filter-button" type="button">Показать</button>
 
       </form>
+
+<!--      Селектор-->
+      <select class="select-control" aria-label="Отображение сортировки">
+        <option value="sorting">Сортировать</option>
+        <option value="cheap">Дешевые</option>
+        <option value="expensive">Дорогие</option>
+      </select>
+
+<!--      Результат поиска-->
+      <div class="search-result">
+
+      </div>
+
 
     </section>
 
