--- a/index.html
+++ b/index.html
@@ -234,21 +234,21 @@
           <ul class="manufactures-checkbox-container">
             <li class="manufactures-checkbox-item">
               <label class="control-checkbox">
-                <input class="visually-hidden control-input" type="checkbox" name="bosch" checked="">
+                <input class="visually-hidden control-input" type="checkbox" name="bosch" checked>
                 <span class="control-mark"></span>
                 BOSCH
               </label>
             </li>
             <li class="manufactures-checkbox-item">
               <label class="control-checkbox">
-                <input class="visually-hidden control-input" type="checkbox" name="interskol" checked="">
+                <input class="visually-hidden control-input" type="checkbox" name="interskol">
                 <span class="control-mark"></span>
                 ИНТЕРСКОЛ
               </label>
             </li>
             <li class="manufactures-checkbox-item">
               <label class="control-checkbox">
-                <input class="visually-hidden control-input" type="checkbox" name="makita">
+                <input class="visually-hidden control-input" type="checkbox" name="makita" checked>
                 <span class="control-mark"></span>
                 MAKIta
               </label>
