--- a/index.html
+++ b/index.html
@@ -293,7 +293,7 @@
         </fieldset>
 
         <!-- Кнопка фильтра -->
-        <button class="filter-button" type="button">Показать</button>
+        <button class="blue-border-button filter-button" type="button">Показать</button>
 
       </form>
 
