Изображения для карточек

--- a/index.html
+++ b/index.html
@@ -306,7 +306,14 @@
 
 <!--      Результат поиска-->
       <div class="search-result">
-
+        <ul class="result-list">
+          <li class="result-item">
+            <img class="">
+            <h3 class="item-title">
+              Перфоратор BOSCH BFG 3000
+            </h3>
+          </li>
+        </ul>
       </div>
 
 
