--- a/index.html
+++ b/index.html
@@ -308,10 +308,12 @@
       <div class="search-result">
         <ul class="result-list">
           <li class="result-item">
-            <img class="">
-            <h3 class="item-title">
-              Перфоратор BOSCH BFG 3000
-            </h3>
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+            <p class="old-price">
+              <span class="middle-line">22500 ₽</span>
+            </p>
+            <button class="add-to-cart">15500 ₽</button>
           </li>
         </ul>
       </div>
