--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
 <!--      Результат поиска-->
       <div class="search-result">
         <ul class="result-list">
-          <li class="result-item">
+          <li class="result-item new-item">
             <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
             <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
             <p class="old-price">
