--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
             <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 3000.">
             <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
             <p class="old-price middle-line">22500 ₽</p>
-            <button class="add-to-cart">15500 ₽</button>
+            <button class="buy-button">15500 ₽</button>
           </li>
         </ul>
       </div>
