--- a/index.html
+++ b/index.html
@@ -313,6 +313,50 @@
             <p class="old-price middle-line">22500 ₽</p>
             <button class="buy-button">15500 ₽</button>
           </li>
+          <li class="result-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+            <p class="old-price">30500 ₽</p>
+            <button class="buy-button">25500 ₽</button>
+          </li>
+          <li class="result-item new-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+            <button class="buy-button">25500 ₽</button>
+          </li>
+          <li class="result-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+            <p class="old-price middle-line">22500 ₽</p>
+            <button class="buy-button">15500 ₽</button>
+          </li>
+          <li class="result-item new-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+            <button class="buy-button">25500 ₽</button>
+          </li>
+          <li class="result-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-2000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+            <button class="buy-button">25500 ₽</button>
+          </li>
+          <li class="result-item new-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 3000</h3>
+            <p class="old-price middle-line">22500 ₽</p>
+            <button class="buy-button">15500 ₽</button>
+          </li>
+          <li class="result-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-3000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 6000</h3>
+            <p class="old-price">30500 ₽</p>
+            <button class="buy-button">25500 ₽</button>
+          </li>
+          <li class="result-item new-item">
+            <img class="product-picture" src="images/main/catalog/card-images/bosch-bfg-6000.jpg" width="216" height="180" alt="Перфоратор BOSCH BFG 6000.">
+            <h3 class="item-title">Перфоратор BOSCH BFG 2000</h3>
+            <button class="buy-button">25500 ₽</button>
+          </li>
         </ul>
       </div>
 
