--- a/index.html
+++ b/index.html
@@ -358,6 +358,30 @@
             <button class="buy-button">25500 ₽</button>
           </li>
         </ul>
+
+<!--        Пагинация-->
+        <div class="pagination-container">
+
+          <ul class="catalog-pagination-list">
+            <li class="catalog-pagination-item">
+              <a class="catalog-pagination-link-inner" href="#">1</a>
+            </li>
+            <li class="catalog-pagination-item">
+              <a class="catalog-pagination-link-inner present-page" href="#">2</a>
+            </li>
+            <li class="catalog-pagination-item">
+              <a class="catalog-pagination-link-inner" href="#">3</a>
+            </li>
+            <li class="catalog-pagination-item">
+              <a class="catalog-pagination-link-inner" href="#">4</a>
+            </li>
+          </ul>
+
+          <!--Кнопка пагинации-->
+          <button class="show-more-button red-button" type="button">Показать еще</button>
+
+        </div>
+
       </div>
 
 
