--- a/index.html
+++ b/index.html
@@ -384,6 +384,47 @@
 
       </div>
 
+    </section>
+
+<!--    Секция сервисов-->
+    <section class="services page-centerer">
+      <h2 class="services-title">Сервисы</h2>
+      <p class="services-description">
+        Хороший интернет-магазин отличается от&nbsp;плохого не&nbsp;только ценами!
+        Мы&nbsp;стараемся изо всех сил, чтобы сделать ваши покупки приятными.
+      </p>
+      <ul class="service-list">
+        <li class="service-item">
+          <h3 class="service-item-title">Доставка</h3>
+          <p class="service-item-description">
+            Мы&nbsp;с&nbsp;удовольствием доставим ваш товар
+            прямо к&nbsp;вашему подъезду совершенно
+            бесплатно! Ведь мы&nbsp;неплохо заработаем,
+            поднимая его на&nbsp;ваш этаж!
+          </p>
+        </li>
+
+        <li class="service-item">
+          <h3 class="service-item-title">Гарантия</h3>
+          <p class="service-item-description">
+            Вы&nbsp;в&nbsp;течение года можете написать нам
+            письмо с&nbsp;просьбой вернуть сумму оплаты,
+            и&nbsp;мы&nbsp;полностью возместим вам стоимось
+            товара
+          </p>
+        </li>
+
+        <li class="service-item">
+          <h3 class="service-item-title">Кредит</h3>
+          <p class="service-item-description">
+            Вы&nbsp;можете оформить кредит прямо на
+            сайте! Для этого нужно выбрать
+            понравившийся товар и&nbsp;заполнить поля и
+            ждать результата одобрения кредита.
+            Все как в&nbsp;банке, только проще!
+          </p>
+        </li>
+      </ul>
 
     </section>
 
