--- a/index.html
+++ b/index.html
@@ -422,7 +422,7 @@
               Вы&nbsp;можете оформить кредит прямо на
               сайте! Для этого нужно выбрать
               понравившийся товар и&nbsp;заполнить поля и
-              ждать результата одобрения кредита.
+              ждать результата одобрения кредита.<br>
               Все как в&nbsp;банке, только проще!
             </p>
           </li>
