--- a/index.html
+++ b/index.html
@@ -431,6 +431,21 @@
 
     </section>
 
+<!--    Контакты-->
+    <section class="contacts">
+      <h2 class="contacts-title">Компания &laquo;Техномарт&raquo;</h2>
+      <p class="contacts-description">
+        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и&nbsp;строительства не&nbsp;оставит равнодушными любителей сэкономить на&nbsp;гастарбайтерах.
+      </p>
+      <p class="contacts-description">
+        Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленные точки России!
+        Техномарт работает со&nbsp;многими транспортными компаниями:
+      </p>
+
+      <a class="inner-slider-button red-button" href="#">о компании</a>
+
+    </section>
+
   </main>
 
 
