Расположение по столбикам

--- a/index.html
+++ b/index.html
@@ -143,6 +143,7 @@
 
 <!--        Слайдер-->
         <li class="card-item slider-item">
+          <h3 class="visually-hidden">Слайдер.</h3>
 
 <!--          Кнопки слайдера-->
           <div class="slider-controls">
@@ -432,25 +433,29 @@
     </section>
 
 <!--    Контакты-->
-    <section class="contacts">
-      <h2 class="contacts-title">Компания &laquo;Техномарт&raquo;</h2>
-      <p class="contacts-description">
-        Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и&nbsp;строительства не&nbsp;оставит равнодушными любителей сэкономить на&nbsp;гастарбайтерах.
-      </p>
-      <p class="contacts-description">
-        Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленные точки России!
-        Техномарт работает со&nbsp;многими транспортными компаниями:
-      </p>
+    <section class="contacts page-centerer">
+      <div class="left-column">
+        <h2 class="contacts-title">Компания &laquo;Техномарт&raquo;</h2>
+        <p class="contacts-description">
+          Настоящий мужской шоппинг начинается здесь! Огромный выбор товаров для ремонта и&nbsp;строительства не&nbsp;оставит равнодушными любителей сэкономить на&nbsp;гастарбайтерах.
+        </p>
+        <p class="contacts-description">
+          Мы&nbsp;можем доставить ваш товар в&nbsp;самые отдаленные точки России!
+          Техномарт работает со&nbsp;многими транспортными компаниями:
+        </p>
 
-<!--      Кнопка-->
-      <a class="inner-slider-button red-button" href="#">о компании</a>
+        <!--      Кнопка-->
+        <a class="inner-slider-button red-button" href="#">о компании</a>
+      </div>
 
-      <h2 class="contacts-title">Контакты</h2>
-      <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
+      <div class="right-column">
+        <h2 class="contacts-title">Контакты</h2>
+        <p class="contacts-description">Вы можете забрать товар сами, заехав в наш офис:</p>
+        <a class="map-link" href="https://www.google.ru/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19%2F8,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.938679,30.3223726,18.5z/data=!4m5!3m4!1s0x4696310fca145cc1:0x42b32648d8238007!8m2!3d59.9387165!4d30.3230474">
+          <img class="map-image" src="images/main/services/map-image.jpg" width="500" height="347" alt="Карта расположения магазина">
+        </a>
+      </div>
 
-      <a class="map-link" href="https://www.google.ru/maps/place/%D0%91%D0%BE%D0%BB%D1%8C%D1%88%D0%B0%D1%8F+%D0%9A%D0%BE%D0%BD%D1%8E%D1%88%D0%B5%D0%BD%D0%BD%D0%B0%D1%8F+%D1%83%D0%BB.,+19%2F8,+%D0%A1%D0%B0%D0%BD%D0%BA%D1%82-%D0%9F%D0%B5%D1%82%D0%B5%D1%80%D0%B1%D1%83%D1%80%D0%B3,+191186/@59.938679,30.3223726,18.5z/data=!4m5!3m4!1s0x4696310fca145cc1:0x42b32648d8238007!8m2!3d59.9387165!4d30.3230474">
-        <img class="map-image" src="images/main/services/map-image.jpg" width="500" height="347" alt="Карта расположения магазина">
-      </a>
     </section>
 
   </main>
