Левая колонка готова

--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
         </p>
 
         <!--      Кнопка-->
-        <a class="inner-slider-button red-button" href="#">о компании</a>
+        <a class="contacts-button red-button" href="#">О компании</a>
       </div>
 
       <div class="right-column">
