--- a/index.html
+++ b/index.html
@@ -461,5 +461,14 @@
 
   </main>
 
+<footer class="main-footer page-centerer">
+  <a class="navigation-logo" href="#">
+    <img class="logo" src="images/logo.svg" width="108" height="18" alt="Логотип сайта.">
+  </a>
+
+
+</footer>
+
+
 
 </body>
