добавил иконки соц сетей

--- a/index.html
+++ b/index.html
@@ -462,10 +462,42 @@
   </main>
 
 <footer class="main-footer page-centerer">
+<!--  -->
   <a class="navigation-logo" href="#">
     <img class="logo" src="images/logo.svg" width="108" height="18" alt="Логотип сайта.">
   </a>
 
+<!--  Адрес -->
+  <address class="footer-text">
+    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+  </address>
+
+<!-- Номер -->
+  <a class="footer-number" href="tel:+78125550555">
+    Тел.: +7 (812) 555-05-55
+  </a>
+
+<!-- Соцсети -->
+  <ul class="social-list">
+    <li>
+      <a class="social-link" href="#">
+        <span class="visually-hidden">Пинтерест.</span>
+
+      </a>
+    </li>
+    <li>
+      <a class="social-link" href="#">
+        <span class="visually-hidden">Вконтакте.</span>
+        
+      </a>
+    </li>
+    <li>
+      <a class="social-link" href="#">
+        <span class="visually-hidden">VSCO.</span>
+
+      </a>
+    </li>
+  </ul>
 
 </footer>
 
