--- a/index.html
+++ b/index.html
@@ -463,8 +463,8 @@
 
 <footer class="main-footer page-centerer">
 <!--  -->
-  <a class="navigation-logo" href="#">
-    <img class="logo" src="images/logo.svg" width="108" height="18" alt="Логотип сайта.">
+  <a class="navigation-logo footer-logo" href="#">
+    <img class="logo" src="images/footer/footer-logo-technomart.svg" width="111" height="22" alt="Логотип сайта.">
   </a>
 
 <!--  Адрес -->
