--- a/index.html
+++ b/index.html
@@ -462,42 +462,64 @@
   </main>
 
 <footer class="main-footer page-centerer">
-<!--  -->
-  <a class="navigation-logo footer-logo" href="#">
-    <img class="logo" src="images/footer/footer-logo-technomart.svg" width="111" height="22" alt="Логотип сайта.">
-  </a>
 
-<!--  Адрес -->
-  <address class="footer-text">
-    г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
-  </address>
+<!--  Левая колонка-->
+  <div class="left-column">
+    <!-- Лого -->
+    <a class="navigation-logo footer-logo" href="#">
+      <img class="logo" src="images/footer/footer-logo-technomart.svg" width="111" height="22" alt="Логотип сайта.">
+    </a>
 
-<!-- Номер -->
-  <a class="footer-number" href="tel:+78125550555">
-    +7 (812) 555-05-55
-  </a>
+    <!--  Адрес -->
+    <address class="footer-text">
+      г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8
+    </address>
 
-<!-- Соцсети -->
-  <ul class="social-list">
-    <li>
-      <a class="social-link" href="#">
-        <span class="visually-hidden">Пинтерест.</span>
-        <svg class="social-icon" width="36" height="36" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18.04 7C11.949 7 7 11.948 7 18.04c0 6.091 4.948 11.04 11.04 11.04 6.091 0 11.04-4.948 11.04-11.04C29.08 11.949 24.132 7 18.04 7Zm0 .96c5.573 0 10.08 4.507 10.08 10.08s-4.507 10.08-10.08 10.08a10.1 10.1 0 0 1-2.93-.433c.413-.69.946-1.677 1.158-2.492l.643-2.453c.336.641 1.319 1.185 2.365 1.185 3.112 0 5.356-2.863 5.356-6.42 0-3.41-2.783-5.96-6.363-5.96-4.454 0-6.819 2.99-6.819 6.245 0 1.513.806 3.398 2.095 3.998.195.09.3.052.345-.138.034-.143.208-.844.287-1.17a.31.31 0 0 0-.072-.296c-.426-.518-.768-1.468-.768-2.355 0-2.276 1.723-4.48 4.659-4.48 2.535 0 4.31 1.729 4.31 4.2 0 2.791-1.409 4.726-3.243 4.726-1.013 0-1.772-.838-1.528-1.866.291-1.227.855-2.55.855-3.436 0-.792-.425-1.453-1.306-1.453-1.036 0-1.868 1.07-1.868 2.506 0 .913.31 1.532.31 1.532s-1.023 4.325-1.21 5.13c-.188.804-.138 1.887-.06 2.694A10.073 10.073 0 0 1 7.96 18.04c0-5.573 4.507-10.08 10.08-10.08Z" fill="#fefafa"/></svg>
-      </a>
-    </li>
-    <li>
-      <a class="social-link" href="#">
-        <span class="visually-hidden">Вконтакте.</span>
-        <svg class="social-icon" width="36" height="36" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.76 20.675c.638-.207 1.454 1.36 2.323 1.96.652.453 1.152.355 1.152.355l2.316-.033s1.21-.075.638-1.036c-.048-.08-.336-.713-1.724-2.015-1.452-1.362-1.255-1.142.493-3.497 1.065-1.435 1.49-2.312 1.357-2.686-.128-.36-.91-.266-.91-.266l-2.609.018c-.254 0-.47.08-.567.344-.002.002-.415 1.11-.964 2.053-1.16 1.993-1.624 2.099-1.816 1.974-.441-.289-.33-1.158-.33-1.776 0-1.932.288-2.738-.564-2.946-.285-.069-.493-.114-1.219-.12-.928-.015-1.716 0-2.163.219-.296.148-.524.474-.386.493.173.023.562.107.77.39.268.369.26 1.194.26 1.194s.152 2.274-.36 2.556c-.353.193-.834-.201-1.87-2.011a16.915 16.915 0 0 1-.928-1.948s-.077-.19-.217-.294c-.167-.124-.4-.163-.4-.163l-2.477.016s-.372.01-.508.175c-.122.145-.01.445-.01.445s1.94 4.588 4.136 6.9c2.014 2.121 4.302 1.98 4.302 1.98h1.037s.313-.036.473-.208c.149-.16.142-.46.142-.46s-.02-1.407.624-1.613Z" fill="#fff"/></svg>
-      </a>
-    </li>
-    <li>
-      <a class="social-link" href="#">
-        <span class="visually-hidden">VSCO.</span>
-        <svg class="social-icon vsco-icon" width="34" height="34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.46 5.79c-.05 0-.1 0-.15.02a10.44 10.44 0 0 0-4.76 1.2 10.25 10.25 0 0 0-1.94 1.3l-.15.14a10.7 10.7 0 0 0-2.2 2.74 10.33 10.33 0 0 0-1.36 5.16 10.61 10.61 0 0 0 3.56 7.9l.15.14c.05.06.12.1.2.14a10.25 10.25 0 0 0 6.5 2.36c.1.04.2.04.3 0a10.44 10.44 0 0 0 4.76-1.2 10.24 10.24 0 0 0 1.95-1.3l.15-.13a9.52 9.52 0 0 0 2.2-2.74 10.32 10.32 0 0 0 1.35-5.17 10.62 10.62 0 0 0-1.86-6 10.7 10.7 0 0 0-1.7-1.9l-.14-.13a10.25 10.25 0 0 0-6.7-2.5.48.48 0 0 0-.16-.03Zm-3.6.64h-.01.01Zm7.2 0h.02-.01Zm-4.08.38v1.92c-.46.03-.92.06-1.35.16l-.33.1-.66-1.8.53-.16c.58-.14 1.2-.19 1.81-.22Zm.96 0c.62.03 1.24.08 1.82.22l.53.16-.66 1.8-.33-.1c-.43-.1-.9-.13-1.36-.16V6.81Zm-4.2.72.66 1.8-.5.22c-.26.14-.5.33-.74.5a.48.48 0 0 0-.26.12l-1.2-1.44a9.3 9.3 0 0 1 1.3-.87c.24-.13.5-.23.74-.33Zm7.45 0c.24.1.5.2.73.32.47.25.9.56 1.31.88l-1.2 1.44a.48.48 0 0 0-.27-.13c-.24-.16-.47-.35-.73-.49l-.5-.22.66-1.8ZM9.95 9.33l1.24 1.48c-.38.36-.75.74-1.05 1.18l-.07.12-1.67-.96.16-.25c.4-.58.88-1.1 1.39-1.57Zm13.03 0c.51.48.99 1 1.39 1.57l.15.25-1.66.96-.07-.12c-.3-.44-.67-.82-1.05-1.18l1.24-1.48Zm-7 .36v1.89c-.7.07-1.35.3-1.93.63l-1.12-1.53c.14-.09.27-.2.41-.28a6.1 6.1 0 0 1 1.52-.58c.36-.08.74-.1 1.12-.13Zm.96 0c.39.03.77.05 1.13.14a5.9 5.9 0 0 1 1.52.57c.14.08.26.19.4.28l-1.11 1.53a4.76 4.76 0 0 0-1.94-.63V9.69Zm-4.8 1.53 1.13 1.56c-.5.45-.92 1.01-1.2 1.64l-1.82-.6a5.79 5.79 0 0 1 .68-1.28c.31-.45.67-.86 1.08-1.22l.07-.06a.46.46 0 0 0 .06-.04Zm8.65 0a.5.5 0 0 0 .06.04l.07.06a6.79 6.79 0 0 1 1.39 1.72c.14.25.26.51.37.79l-1.82.6a4.82 4.82 0 0 0-1.2-1.65l1.13-1.56Zm-12.85.77 1.67.96c-.11.22-.24.44-.32.67l-.06.2a.48.48 0 0 0-.1.36l-.1.37-1.9-.33c.18-.79.45-1.53.81-2.23Zm17.04 0c.36.7.64 1.44.81 2.23l-1.89.33a7.01 7.01 0 0 0-.1-.38.48.48 0 0 0-.1-.34l-.05-.2c-.1-.24-.22-.46-.33-.68l1.66-.96Zm-8.57.53h.11a3.83 3.83 0 0 1 2.1 7 3.83 3.83 0 0 1-5.77-1.88 3.85 3.85 0 0 1-.07-2.36 3.83 3.83 0 0 1 3.63-2.76Zm6.55 2.22c.04.14.09.26.11.4l.02.1.04.3a6.94 6.94 0 0 1 0 1.62c0 .1-.02.2-.04.3a.48.48 0 0 0-.02.1c-.02.14-.07.27-.1.4l-1.82-.59a4.78 4.78 0 0 0 0-2.04l1.81-.59Zm-13 0 1.82.6a4.78 4.78 0 0 0 0 2.03l-1.81.59c-.04-.13-.1-.26-.12-.4a.48.48 0 0 0-.02-.1l-.04-.3a6.93 6.93 0 0 1 0-1.62l.04-.3a.48.48 0 0 0 .02-.1c.03-.14.08-.26.12-.4Zm-3.02.42 1.9.33a7.8 7.8 0 0 0 0 1.72l-1.9.34v-.04a9.64 9.64 0 0 1 0-2.32v-.03Zm19.05 0v.03a9.65 9.65 0 0 1 0 2.33v.03l-1.9-.34a7.8 7.8 0 0 0 0-1.72l1.9-.33Zm-16.96 3a7 7 0 0 0 .1.36c-.01.13.02.26.1.36.02.06.03.14.06.2.08.23.2.45.32.68l-1.67.96a9.35 9.35 0 0 1-.8-2.23l1.89-.34Zm14.87 0 1.9.33a9.35 9.35 0 0 1-.82 2.23l-1.66-.96c.11-.23.24-.45.33-.68l.05-.21c.08-.1.11-.22.1-.34l.1-.38Zm-11.83.12c.28.63.7 1.2 1.2 1.65l-1.13 1.56a.48.48 0 0 0-.06-.04l-.07-.06c-.4-.36-.77-.77-1.08-1.22a5.82 5.82 0 0 1-.3-.5 5.79 5.79 0 0 1-.38-.8l1.82-.59Zm8.79 0 1.82.6a6.18 6.18 0 0 1-.68 1.29c-.31.45-.68.86-1.08 1.21l-.07.06a.47.47 0 0 0-.06.05l-1.14-1.56c.51-.46.93-1.02 1.2-1.65Zm-6.81 2.21c.58.34 1.23.57 1.93.64v1.89c-.38-.03-.76-.05-1.13-.14a5.88 5.88 0 0 1-1.5-.58c-.15-.08-.28-.19-.42-.27l1.12-1.54Zm4.83 0 1.11 1.54c-.14.08-.26.2-.4.27a6.1 6.1 0 0 1-1.52.58c-.36.09-.74.1-1.13.14v-1.9c.7-.06 1.36-.29 1.94-.63Zm-8.81.1.07.13c.3.43.67.81 1.05 1.18l-1.24 1.47a9.84 9.84 0 0 1-1.4-1.56l-.15-.25 1.67-.96Zm12.79 0 1.66.97-.15.25c-.4.57-.88 1.08-1.39 1.56l-1.24-1.47c.38-.37.75-.75 1.05-1.18l.07-.12ZM11.9 22.55c.07.07.17.1.26.12.25.17.48.35.73.49.17.09.34.15.5.23l-.65 1.8c-.25-.1-.5-.2-.74-.33a9.3 9.3 0 0 1-1.3-.87l1.2-1.44Zm9.13 0 1.2 1.44a9.3 9.3 0 0 1-1.3.87c-.25.13-.5.22-.74.33l-.66-1.8c.17-.08.34-.14.5-.23.26-.14.5-.32.73-.49.1-.01.2-.05.27-.12ZM14.3 23.7l.33.1c.43.1.9.14 1.35.17v1.91a9.54 9.54 0 0 1-1.8-.22h-.01c-.19-.04-.35-.1-.53-.16l.66-1.8Zm4.33 0 .66 1.8c-.18.06-.35.12-.53.16-.58.15-1.2.2-1.82.22v-1.91c.46-.03.93-.06 1.36-.17.11-.02.22-.07.33-.1Zm-5.78 2.56h.01-.01Zm7.23 0h-.01.01Z" fill="#fefafa"/></svg>
-      </a>
-    </li>
-  </ul>
+    <!-- Номер -->
+    <a class="footer-number" href="tel:+78125550555">
+      +7 (812) 555-05-55
+    </a>
+
+    <!-- Соцсети -->
+    <ul class="social-list">
+      <li>
+        <a class="social-link" href="#">
+          <span class="visually-hidden">Пинтерест.</span>
+          <svg class="social-icon" width="36" height="36" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M18.04 7C11.949 7 7 11.948 7 18.04c0 6.091 4.948 11.04 11.04 11.04 6.091 0 11.04-4.948 11.04-11.04C29.08 11.949 24.132 7 18.04 7Zm0 .96c5.573 0 10.08 4.507 10.08 10.08s-4.507 10.08-10.08 10.08a10.1 10.1 0 0 1-2.93-.433c.413-.69.946-1.677 1.158-2.492l.643-2.453c.336.641 1.319 1.185 2.365 1.185 3.112 0 5.356-2.863 5.356-6.42 0-3.41-2.783-5.96-6.363-5.96-4.454 0-6.819 2.99-6.819 6.245 0 1.513.806 3.398 2.095 3.998.195.09.3.052.345-.138.034-.143.208-.844.287-1.17a.31.31 0 0 0-.072-.296c-.426-.518-.768-1.468-.768-2.355 0-2.276 1.723-4.48 4.659-4.48 2.535 0 4.31 1.729 4.31 4.2 0 2.791-1.409 4.726-3.243 4.726-1.013 0-1.772-.838-1.528-1.866.291-1.227.855-2.55.855-3.436 0-.792-.425-1.453-1.306-1.453-1.036 0-1.868 1.07-1.868 2.506 0 .913.31 1.532.31 1.532s-1.023 4.325-1.21 5.13c-.188.804-.138 1.887-.06 2.694A10.073 10.073 0 0 1 7.96 18.04c0-5.573 4.507-10.08 10.08-10.08Z" fill="#fefafa"/></svg>
+        </a>
+      </li>
+      <li>
+        <a class="social-link" href="#">
+          <span class="visually-hidden">Вконтакте.</span>
+          <svg class="social-icon" width="36" height="36" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M19.76 20.675c.638-.207 1.454 1.36 2.323 1.96.652.453 1.152.355 1.152.355l2.316-.033s1.21-.075.638-1.036c-.048-.08-.336-.713-1.724-2.015-1.452-1.362-1.255-1.142.493-3.497 1.065-1.435 1.49-2.312 1.357-2.686-.128-.36-.91-.266-.91-.266l-2.609.018c-.254 0-.47.08-.567.344-.002.002-.415 1.11-.964 2.053-1.16 1.993-1.624 2.099-1.816 1.974-.441-.289-.33-1.158-.33-1.776 0-1.932.288-2.738-.564-2.946-.285-.069-.493-.114-1.219-.12-.928-.015-1.716 0-2.163.219-.296.148-.524.474-.386.493.173.023.562.107.77.39.268.369.26 1.194.26 1.194s.152 2.274-.36 2.556c-.353.193-.834-.201-1.87-2.011a16.915 16.915 0 0 1-.928-1.948s-.077-.19-.217-.294c-.167-.124-.4-.163-.4-.163l-2.477.016s-.372.01-.508.175c-.122.145-.01.445-.01.445s1.94 4.588 4.136 6.9c2.014 2.121 4.302 1.98 4.302 1.98h1.037s.313-.036.473-.208c.149-.16.142-.46.142-.46s-.02-1.407.624-1.613Z" fill="#fff"/></svg>
+        </a>
+      </li>
+      <li>
+        <a class="social-link" href="#">
+          <span class="visually-hidden">VSCO.</span>
+          <svg class="social-icon vsco-icon" width="34" height="34" fill="none" xmlns="http://www.w3.org/2000/svg"><path d="M16.46 5.79c-.05 0-.1 0-.15.02a10.44 10.44 0 0 0-4.76 1.2 10.25 10.25 0 0 0-1.94 1.3l-.15.14a10.7 10.7 0 0 0-2.2 2.74 10.33 10.33 0 0 0-1.36 5.16 10.61 10.61 0 0 0 3.56 7.9l.15.14c.05.06.12.1.2.14a10.25 10.25 0 0 0 6.5 2.36c.1.04.2.04.3 0a10.44 10.44 0 0 0 4.76-1.2 10.24 10.24 0 0 0 1.95-1.3l.15-.13a9.52 9.52 0 0 0 2.2-2.74 10.32 10.32 0 0 0 1.35-5.17 10.62 10.62 0 0 0-1.86-6 10.7 10.7 0 0 0-1.7-1.9l-.14-.13a10.25 10.25 0 0 0-6.7-2.5.48.48 0 0 0-.16-.03Zm-3.6.64h-.01.01Zm7.2 0h.02-.01Zm-4.08.38v1.92c-.46.03-.92.06-1.35.16l-.33.1-.66-1.8.53-.16c.58-.14 1.2-.19 1.81-.22Zm.96 0c.62.03 1.24.08 1.82.22l.53.16-.66 1.8-.33-.1c-.43-.1-.9-.13-1.36-.16V6.81Zm-4.2.72.66 1.8-.5.22c-.26.14-.5.33-.74.5a.48.48 0 0 0-.26.12l-1.2-1.44a9.3 9.3 0 0 1 1.3-.87c.24-.13.5-.23.74-.33Zm7.45 0c.24.1.5.2.73.32.47.25.9.56 1.31.88l-1.2 1.44a.48.48 0 0 0-.27-.13c-.24-.16-.47-.35-.73-.49l-.5-.22.66-1.8ZM9.95 9.33l1.24 1.48c-.38.36-.75.74-1.05 1.18l-.07.12-1.67-.96.16-.25c.4-.58.88-1.1 1.39-1.57Zm13.03 0c.51.48.99 1 1.39 1.57l.15.25-1.66.96-.07-.12c-.3-.44-.67-.82-1.05-1.18l1.24-1.48Zm-7 .36v1.89c-.7.07-1.35.3-1.93.63l-1.12-1.53c.14-.09.27-.2.41-.28a6.1 6.1 0 0 1 1.52-.58c.36-.08.74-.1 1.12-.13Zm.96 0c.39.03.77.05 1.13.14a5.9 5.9 0 0 1 1.52.57c.14.08.26.19.4.28l-1.11 1.53a4.76 4.76 0 0 0-1.94-.63V9.69Zm-4.8 1.53 1.13 1.56c-.5.45-.92 1.01-1.2 1.64l-1.82-.6a5.79 5.79 0 0 1 .68-1.28c.31-.45.67-.86 1.08-1.22l.07-.06a.46.46 0 0 0 .06-.04Zm8.65 0a.5.5 0 0 0 .06.04l.07.06a6.79 6.79 0 0 1 1.39 1.72c.14.25.26.51.37.79l-1.82.6a4.82 4.82 0 0 0-1.2-1.65l1.13-1.56Zm-12.85.77 1.67.96c-.11.22-.24.44-.32.67l-.06.2a.48.48 0 0 0-.1.36l-.1.37-1.9-.33c.18-.79.45-1.53.81-2.23Zm17.04 0c.36.7.64 1.44.81 2.23l-1.89.33a7.01 7.01 0 0 0-.1-.38.48.48 0 0 0-.1-.34l-.05-.2c-.1-.24-.22-.46-.33-.68l1.66-.96Zm-8.57.53h.11a3.83 3.83 0 0 1 2.1 7 3.83 3.83 0 0 1-5.77-1.88 3.85 3.85 0 0 1-.07-2.36 3.83 3.83 0 0 1 3.63-2.76Zm6.55 2.22c.04.14.09.26.11.4l.02.1.04.3a6.94 6.94 0 0 1 0 1.62c0 .1-.02.2-.04.3a.48.48 0 0 0-.02.1c-.02.14-.07.27-.1.4l-1.82-.59a4.78 4.78 0 0 0 0-2.04l1.81-.59Zm-13 0 1.82.6a4.78 4.78 0 0 0 0 2.03l-1.81.59c-.04-.13-.1-.26-.12-.4a.48.48 0 0 0-.02-.1l-.04-.3a6.93 6.93 0 0 1 0-1.62l.04-.3a.48.48 0 0 0 .02-.1c.03-.14.08-.26.12-.4Zm-3.02.42 1.9.33a7.8 7.8 0 0 0 0 1.72l-1.9.34v-.04a9.64 9.64 0 0 1 0-2.32v-.03Zm19.05 0v.03a9.65 9.65 0 0 1 0 2.33v.03l-1.9-.34a7.8 7.8 0 0 0 0-1.72l1.9-.33Zm-16.96 3a7 7 0 0 0 .1.36c-.01.13.02.26.1.36.02.06.03.14.06.2.08.23.2.45.32.68l-1.67.96a9.35 9.35 0 0 1-.8-2.23l1.89-.34Zm14.87 0 1.9.33a9.35 9.35 0 0 1-.82 2.23l-1.66-.96c.11-.23.24-.45.33-.68l.05-.21c.08-.1.11-.22.1-.34l.1-.38Zm-11.83.12c.28.63.7 1.2 1.2 1.65l-1.13 1.56a.48.48 0 0 0-.06-.04l-.07-.06c-.4-.36-.77-.77-1.08-1.22a5.82 5.82 0 0 1-.3-.5 5.79 5.79 0 0 1-.38-.8l1.82-.59Zm8.79 0 1.82.6a6.18 6.18 0 0 1-.68 1.29c-.31.45-.68.86-1.08 1.21l-.07.06a.47.47 0 0 0-.06.05l-1.14-1.56c.51-.46.93-1.02 1.2-1.65Zm-6.81 2.21c.58.34 1.23.57 1.93.64v1.89c-.38-.03-.76-.05-1.13-.14a5.88 5.88 0 0 1-1.5-.58c-.15-.08-.28-.19-.42-.27l1.12-1.54Zm4.83 0 1.11 1.54c-.14.08-.26.2-.4.27a6.1 6.1 0 0 1-1.52.58c-.36.09-.74.1-1.13.14v-1.9c.7-.06 1.36-.29 1.94-.63Zm-8.81.1.07.13c.3.43.67.81 1.05 1.18l-1.24 1.47a9.84 9.84 0 0 1-1.4-1.56l-.15-.25 1.67-.96Zm12.79 0 1.66.97-.15.25c-.4.57-.88 1.08-1.39 1.56l-1.24-1.47c.38-.37.75-.75 1.05-1.18l.07-.12ZM11.9 22.55c.07.07.17.1.26.12.25.17.48.35.73.49.17.09.34.15.5.23l-.65 1.8c-.25-.1-.5-.2-.74-.33a9.3 9.3 0 0 1-1.3-.87l1.2-1.44Zm9.13 0 1.2 1.44a9.3 9.3 0 0 1-1.3.87c-.25.13-.5.22-.74.33l-.66-1.8c.17-.08.34-.14.5-.23.26-.14.5-.32.73-.49.1-.01.2-.05.27-.12ZM14.3 23.7l.33.1c.43.1.9.14 1.35.17v1.91a9.54 9.54 0 0 1-1.8-.22h-.01c-.19-.04-.35-.1-.53-.16l.66-1.8Zm4.33 0 .66 1.8c-.18.06-.35.12-.53.16-.58.15-1.2.2-1.82.22v-1.91c.46-.03.93-.06 1.36-.17.11-.02.22-.07.33-.1Zm-5.78 2.56h.01-.01Zm7.23 0h-.01.01Z" fill="#fefafa"/></svg>
+        </a>
+      </li>
+    </ul>
+  </div>
+
+<!--  Правая колонка-->
+  <div class="right-column">
+    <address class="feedback footer-text">
+      Обратная связь:
+      <a class="feedback-e-mail footer-text" href="mailto:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+    </address>
+
+<!--    Форма подписки-->
+    <p class="subscribe-description footer-text">Получайте лучшие предложения</p>
+    <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
+      <label class="visually-hidden" for="subscribe-email">Email</label>
+      <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required="">
+      <button class="subscribe-button" type="submit">
+        Подписаться
+      </button>
+    </form>
+  </div>
 
 </footer>
 
