--- a/index.html
+++ b/index.html
@@ -513,11 +513,9 @@
 <!--    Форма подписки-->
     <p class="subscribe-description footer-text">Получайте лучшие предложения</p>
     <form class="subscribe-form" action="https://echo.htmlacademy.ru/" method="post">
-      <label class="visually-hidden" for="subscribe-email">Email</label>
-      <input class="field" placeholder="Ваш e-mail" type="email" name="subscribe-email" id="subscribe-email" required="">
-      <button class="subscribe-button" type="submit">
-        Подписаться
-      </button>
+      <label class="visually-hidden" for="subscribe-email">Email.</label>
+      <input class="field" placeholder="email@example.com" type="email" name="subscribe-email" id="subscribe-email" required>
+      <button class="subscribe-button" type="submit">Подписаться</button>
     </form>
   </div>
 
