--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@
         <a class="contacts-button red-button" href="#">О компании</a>
       </div>
 
-      <div class="right-column">
+      <div class="right-contacts-column">
         <h2 class="contacts-title">Контакты</h2>
 <!--        Здесь ставлю в предложении два пробела, так как в макете опечатка-->
         <p class="contacts-description">Вы можете забрать товар сами,&nbsp;&nbsp;заехав в наш офис:</p>
