--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
 
         <div class="login-container">
           <button class="general-button login-button" type="button">Войти</button>
+
+<!--          Окно личного кабинета-->
           <form class="login-popover popover-is-closed" action="https://echo.htmlacademy.ru/" method="post">
             <h2 class="popover-title">Личный кабинет</h2>
 
@@ -62,7 +64,7 @@
             </label>
 
 <!--            Кнопки и ссылки-->
-            <a class="login-link" href="#">Забыли пароль?</a>
+            <a class="login-link" href="#">Забыли пароль</a>
             <a class="login-link" href="#">Регистрация</a>
             <button class="login-sign-in-button" type="submit">Войти</button>
             <a class="login-sign-up-button" href="#">Регистрация</a>
