--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
 
 <!--            Кнопки и ссылки-->
             <a class="login-link" href="#">Забыли пароль</a>
-            <a class="login-link" href="#">Регистрация</a>
-            <button class="login-sign-in-button" type="submit">Войти</button>
-            <a class="login-sign-up-button" href="#">Регистрация</a>
+
+            <button class="login-sign-in-button general-button" type="submit">Войти</button>
+            <a class="login-sign-up-button general-button" href="#">Регистрация</a>
 
           </form>
         </div>
