--- a/index.html
+++ b/index.html
@@ -46,6 +46,11 @@
           <form class="login-popover popover-is-closed" action="https://echo.htmlacademy.ru/" method="post">
             <h2 class="popover-title">Личный кабинет</h2>
 
+            <button class="close-popover-button">
+              <span class="visually-hidden">Закрыть.</span>
+              <svg width="20" height="20" fill="none" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" clip-rule="evenodd" d="M10 20a10 10 0 1 1 0-20 10 10 0 0 1 0 20Zm0-1.82a8.18 8.18 0 1 0 0-16.36 8.18 8.18 0 0 0 0 16.36Zm-3-3.9 3-3 3 3 1.28-1.29-3-2.99 3-3-1.29-1.28-2.99 3-3-3-1.28 1.29 3 2.99-3 3 1.29 1.28Z" fill="#c4c4c4"/></svg>
+            </button>
+
 <!--            Поле логина-->
             <label class="login-field">
               <input class="login-input text-field" type="text" placeholder="Логин" required>
