окно личного кабинета готово

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             </label>
 
 <!--            Кнопки и ссылки-->
-            <a class="login-link" href="#">Забыли пароль</a>
+            <a class="login-link" href="#">Забыл пароль</a>
 
             <button class="login-sign-in-button general-button" type="submit">Войти</button>
             <a class="login-sign-up-button general-button" href="#">Регистрация</a>
